Refactored code; fixed inconsistent spacing on unrecognized languages

--- a/res/style.css
+++ b/res/style.css
@@ -277,6 +277,11 @@ code {
     max-width: 800px;
 }
 
+code:not(.hljs) {
+    display: block;
+    margin: 0px 20px;
+    padding: 7px;
+}
 
 /* Collapible */
 
